--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kevin Lin
 description: Aspiring Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/kevinlin994/kevinlin994.github.io/blob/master/kevin%20pic.JPG
 
 #
 # Flags below are optional
