--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kevin Lin
 description: Aspiring Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/kevinlin994/kevinlin994.github.io/blob/master/kevin%20pic.JPG
+avatar: https://avatars3.githubusercontent.com/u/38269482?s=400&u=53815fb2928837dc8f4ecb7eed199997ec12ad58&v=4
 
 #
 # Flags below are optional
